test/integration/hostnames-matchtype/manifests/9-gw-exact-route-wildcard-match-regex/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-http
spec:
  parentRefs:
  - name: hug-gateway
    sectionName: http
  - name: hug-gateway
    sectionName: https
  hostnames:
  - "*.haproxy"
  rules:
  - matches:
    - path:
        type: RegularExpression
        value: ^/api/.*
    backendRefs:
    - name: http-echo
      port: 80
---
